2000-09-30  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Bump version number.

	* lib/Mj/BounceParser.pm (parse_msn): Handle MSN bounces with
	multiline diagnostics.
	(parse_compuserve): Old function moved to parse_compuserve2.  New
	function to parse new bounce format.
	(parse_exim): Look at X-Failed-Recipients: header as well.

	* lib/Mj/SimpleDB/Text.pm: Use Majordomo::_re_match instead of
	local version.  Delete local copy.

	* lib/Majordomo.pm: Declare various undeclared variables.

	* lib/Mj/SimpleDB/DB.pm: Use Majordomo::_re_match for all regexp
	work.  Delete the local copy.

2000-09-29  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_shell: Add commented out code to get backtraces on
	warnings.
	Set $/ to $/ to get rid of a strange Perl problem.

	* lib/Majordomo.pm (substitute_vars): Was opening the input file
	twice.

2000-09-26  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm (_compile_rule):  Add support for a 
	time specification within asterisks, similar to the
	digest "times" field.

2000-09-24  Michael Yount <csf@moscow.com>

	* files/en/ack_delay, delay, delay_noweb, repl_delay, 
	repl_fulfill:  New reply files for "delay" tokens.
	(Idea suggested by Marc Fournier.)

	* bin/mj_email, mj_queuerun:  Determine author's address.
	This allows the global 'access' checks to restrict posted
	messages and messages to list owners.

	* bin/mj_shell:  Add support for the default command
	in interactive mode (delay, password, and user only).

	* bin/mj_wwwadm:  Obtain token reasons from the reasons
	variable instead of arg2.

	* lib/Majordomo.pm:  Simplify calls to *_access_check.
	(trigger) Add "delay" trigger to fulfill delayed requests.

	* lib/Mj/Access.pm:  (_gen_pw) Accept an argument specifying
	the minimum password length.
	(list_access_check)  Use a hash instead of a long argument list.
	If the master password is used, and a delay was requested,
	delay the command.  Simplify calls to action routines (_a_*).